--- a/phoneapp/src/main/res/layout/activity_profile.xml
+++ b/phoneapp/src/main/res/layout/activity_profile.xml
@@ -1,229 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ConstraintLayout"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <ScrollView
+    <!-- Main content layout -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <!-- Toolbar at the top -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:titleTextColor="@android:color/white" />
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:id="@+id/scrollView"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cardProfile"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                app:cardCornerRadius="8dp">
+                android:orientation="vertical"
+                android:padding="16dp">
 
-                <RelativeLayout
+                <!-- Card for general profile information -->
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardProfile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                    <LinearLayout
-                        android:id="@+id/llProfileInfo"
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:orientation="vertical">
+                        android:padding="16dp">
 
-                        <TextView
+                        <LinearLayout
+                            android:id="@+id/llProfileInfo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/general_info"
-                            android:textAlignment="center"
-                            android:textSize="20sp">
+                            android:layout_centerHorizontal="true"
+                            android:orientation="vertical">
 
-                        </TextView>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@string/general_info"
+                                android:textAlignment="center"
+                                android:textSize="20sp" />
 
-                        <ImageView
-                            android:id="@+id/profile_name_picture_layout"
-                            android:layout_width="150dp"
-                            android:layout_height="150dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginBottom="8dp"
-                            android:scaleType="centerCrop"
-                            app:srcCompat="@drawable/profile_pic"
-                            android:contentDescription="@string/profile_picture" />
+                            <ImageView
+                                android:id="@+id/profile_name_picture_layout"
+                                android:layout_width="150dp"
+                                android:layout_height="150dp"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginBottom="8dp"
+                                android:contentDescription="@string/profile_picture"
+                                android:scaleType="centerCrop"
+                                app:srcCompat="@drawable/profile_pic" />
 
-                        <EditText
-                            android:id="@+id/name"
-                            android:layout_width="match_parent"
+                            <EditText
+                                android:id="@+id/name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:hint="@string/name"
+                                android:inputType="textPersonName" />
+
+                            <EditText
+                                android:id="@+id/phone_number"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:hint="@string/phone_number"
+                                android:inputType="number"
+                                tools:ignore="TextFields" />
+
+                            <EditText
+                                android:id="@+id/email"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:hint="@string/email"
+                                android:inputType="textEmailAddress" />
+                        </LinearLayout>
+
+                        <ImageButton
+                            android:id="@+id/btnEditProfile"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:hint="@string/name"
-                            android:inputType="textPersonName" />
+                            android:layout_alignParentEnd="true"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:src="@drawable/edit" />
 
-                        <EditText
-                            android:id="@+id/phone_number"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:hint="@string/phone_number"
-                            android:inputType="number"
-                            tools:ignore="TextFields" />
+                    </RelativeLayout>
+                </com.google.android.material.card.MaterialCardView>
 
-                        <EditText
-                            android:id="@+id/email"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:hint="@string/email"
-                            android:inputType="textEmailAddress" />
-                    </LinearLayout>
-
-                    <ImageButton
-                        android:id="@+id/btnEditProfile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/edit" />
-
-                </RelativeLayout>
-            </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cardDetails"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp">
-
-                <RelativeLayout
+                <!-- Card for detailed personal data -->
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardDetails"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp">
+                    app:cardCornerRadius="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/cardProfile">
 
-                    <LinearLayout
-                        android:id="@+id/llDetails"
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:padding="16dp">
 
-                        <TextView
+                        <LinearLayout
+                            android:id="@+id/llDetails"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/personal_data2"
-                            android:textSize="20sp"
-                            android:textAlignment="center">
-                        </TextView>
+                            android:orientation="vertical">
 
-                        <EditText
-                            android:id="@+id/editTextHeight"
-                            android:layout_width="match_parent"
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@string/personal_data2"
+                                android:textAlignment="center"
+                                android:textSize="20sp" />
+
+                            <EditText
+                                android:id="@+id/editTextHeight"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:hint="@string/height"
+                                android:inputType="numberDecimal" />
+
+                            <EditText
+                                android:id="@+id/editTextWeight"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:hint="@string/weight"
+                                android:inputType="numberDecimal" />
+
+                            <EditText
+                                android:id="@+id/editTextAge"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:hint="@string/age"
+                                android:inputType="number" />
+
+                            <EditText
+                                android:id="@+id/editTextGender"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:hint="@string/gender"
+                                android:inputType="text" />
+                        </LinearLayout>
+
+                        <ImageButton
+                            android:id="@+id/btnEditDetails"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:hint="@string/height"
-                            android:layout_marginBottom="5dp"
-                            android:inputType="numberDecimal" />
+                            android:layout_alignParentEnd="true"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:contentDescription="@string/edit"
+                            android:src="@drawable/edit" />
 
-                        <EditText
-                            android:id="@+id/editTextWeight"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/weight"
-                            android:layout_marginBottom="5dp"
-                            android:inputType="numberDecimal" />
+                    </RelativeLayout>
+                </com.google.android.material.card.MaterialCardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-                        <EditText
-                            android:id="@+id/editTextAge"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/age"
-                            android:layout_marginBottom="5dp"
-                            android:inputType="number" />
-
-                        <EditText
-                            android:id="@+id/editTextGender"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:hint="@string/gender"
-                            android:inputType="text" />
-                    </LinearLayout>
-
-                    <ImageButton
-                        android:id="@+id/btnEditDetails"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:contentDescription="@string/edit"
-                        android:src="@drawable/edit" />
-
-                </RelativeLayout>
-            </com.google.android.material.card.MaterialCardView>
-        </LinearLayout>
-    </ScrollView>
-
-    <!--    &lt;!&ndash; Main content layout &ndash;&gt;-->
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/profile_main_content"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-<!--        &lt;!&ndash; Your main content UI components go here &ndash;&gt;-->
-<!--        <ScrollView-->
-<!--            android:id="@+id/scroll_view"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
-
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:id="@+id/profile_page_layout"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
-
-<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                    android:id="@+id/profile_header_layout"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="vertical"-->
-<!--                    app:layout_constraintTop_toTopOf="parent">-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/profile_title_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginStart="15dp"-->
-<!--                        android:text="@string/profile_name"-->
-<!--                        android:textSize="25sp"-->
-<!--                        app:layout_constraintBottom_toTopOf="@+id/profile_header_summary_description"-->
-<!--                        app:layout_constraintStart_toStartOf="parent"-->
-<!--                        app:layout_constraintTop_toTopOf="parent" />-->
-
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/profile_header_summary_description"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginStart="15dp"-->
-<!--                        android:text="@string/profile_email"-->
-<!--                        android:textSize="15sp"-->
-<!--                        app:layout_constraintTop_toBottomOf="@id/profile_title_text"-->
-<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                        app:layout_constraintStart_toStartOf="parent"/>-->
-
-<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--        </ScrollView>-->
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--    &lt;!&ndash; Navigation drawer &ndash;&gt;-->
-<!--    <com.google.android.material.navigation.NavigationView-->
-<!--        android:id="@+id/design_navigation_view"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_gravity="start"-->
-<!--        app:headerLayout="@layout/header"-->
-<!--        app:menu="@menu/main_menu" />-->
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Navigation Drawer for additional pages -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/design_navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/main_menu" />
+</androidx.drawerlayout.widget.DrawerLayout>
