--- a/phoneapp/src/main/res/layout/activity_stress.xml
+++ b/phoneapp/src/main/res/layout/activity_stress.xml
@@ -42,6 +42,98 @@
                     android:id="@+id/stressGraph"
                     android:layout_width="match_parent"
                     android:layout_height="400dp" />
+
+                <Button
+                    android:id="@+id/add_event_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add event"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="8dp" />
+
+                <!--<TextView
+                    android:id="@+id/select_time_interval_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select time interval"
+                    android:textSize="18sp"
+                    android:padding="8dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <TimePicker
+                    android:id="@+id/time_picker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:timePickerMode="spinner"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="8dp"
+                    set/>-->
+
+                <TextView
+                    android:id="@+id/time_range_display"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Selected Time Range"
+                    android:textSize="18sp"
+                    android:padding="8dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <Button
+                    android:id="@+id/show_dialog_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select Time Range"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="8dp" />
+
+                <TextView
+                    android:id="@+id/end_time_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Actual stress level"
+                    android:textSize="18sp"
+                    android:padding="8dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <!--<TextView
+                    android:id="@+id/actual_stress_level_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Actual stress level"
+                    android:textSize="18sp"
+                    android:padding="8dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <TimePicker
+                    android:id="@+id/stress_level_picker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:timePickerMode="spinner"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="8dp" />-->
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_horizontal"
+                    android:padding="8dp">
+
+                    <Button
+                        android:id="@+id/discard_changes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Discard"
+                        android:padding="8dp" />
+
+                    <Button
+                        android:id="@+id/save_changes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Save"
+                        android:padding="8dp"/>
+
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
