--- a/phoneapp/src/main/res/layout/activity_challenges.xml
+++ b/phoneapp/src/main/res/layout/activity_challenges.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/recycler_view_challenges"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal" />
+                    android:orientation="vertical" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
@@ -47,7 +47,7 @@
 
     <!-- Navigation drawer -->
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/design_navigation_view"
+        android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
